board/overlay/etc/iptables.rules
# Generated by iptables-save v1.6.0 on Wed Nov 16 17:13:55 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [32:2744]
-A INPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A INPUT -s ${SIT_REMOTE} -i wan -p 41 -j ACCEPT
-A INPUT -i lan -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p icmp -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-admin-prohibited
-A FORWARD -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A FORWARD -i lan -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i lan -p udp -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i lan -p icmp -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-admin-prohibited
COMMIT
# Completed on Wed Nov 16 17:13:55 2016
# Generated by iptables-save v1.6.0 on Wed Nov 16 17:13:55 2016
*mangle
:PREROUTING ACCEPT [1635:91744]
:INPUT ACCEPT [1613:90014]
:FORWARD ACCEPT [4:362]
:OUTPUT ACCEPT [1066:103865]
:POSTROUTING ACCEPT [1070:104227]
-A FORWARD -o wan -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --set-mss 1400
COMMIT
# Completed on Wed Nov 16 17:13:55 2016
# Generated by iptables-save v1.6.0 on Wed Nov 16 17:13:55 2016
*nat
:PREROUTING ACCEPT [62:4880]
:INPUT ACCEPT [2:120]
:OUTPUT ACCEPT [11:1027]
:POSTROUTING ACCEPT [4:573]
-A POSTROUTING -o wan -j MASQUERADE
COMMIT
# Completed on Wed Nov 16 17:13:55 2016
# Generated by iptables-save v1.6.0 on Wed Nov 16 17:13:55 2016
*raw
:PREROUTING ACCEPT [1635:91744]
:OUTPUT ACCEPT [1066:103865]
-A PREROUTING -p tcp -m tcp --dport 21 -j CT --helper ftp
COMMIT
# Completed on Wed Nov 16 17:13:55 2016
